fix: horizontal scroll issue bug fix + ios bug fix

--- a/public/css2/page/_base.scss
+++ b/public/css2/page/_base.scss
@@ -1,6 +1,9 @@
 
 @import 'parts/variables';
 
+.row {
+    margin: 0 !important;
+}
 // this is custom scss file
 
 html {
