--- a/public/css2/page/member_professor.scss
+++ b/public/css2/page/member_professor.scss
@@ -42,8 +42,6 @@
 
 
     .member_desc {
-    // width error fix
-        margin: 0 1rem 0 1rem;
 
     // to center the desc
         // display:flex;
