--- a/public/css2/page/parts/_breadcrumb.scss
+++ b/public/css2/page/parts/_breadcrumb.scss
@@ -4,7 +4,7 @@
     right:0;
     left:0;
     z-index:1030;
-
+    margin:0;
 }
 
 .breadcrumb-row {
