--- a/public/css2/page/parts/_footer.scss
+++ b/public/css2/page/parts/_footer.scss
@@ -4,6 +4,7 @@
     padding: 3rem 5rem 3rem 5rem;
     background-color: $primary_dark_grey;
     color: $primary_white;
+    margin: 0;
 
     // for the VML main logo in the footer
     .footer-brand {
