--- a/public/css2/page/parts/_nav.scss
+++ b/public/css2/page/parts/_nav.scss
@@ -1,5 +1,6 @@
 
 .navbar {
+
     // flexbox
     display: flex;
     align-items: center;
@@ -29,5 +30,88 @@
 
     .nav-link {
         padding: 0 1.5rem;
+    }
+}
+// From under 750px,
+// Navbar leaves only the logo and the menu btn
+@media (max-width: 750px) {
+    .navbar {
+        .menu_btn {
+            display: unset;
+            position: absolute;
+            top:2rem;
+            left: 2rem;
+            margin: 0;
+        }
+        .menu_btn:active {
+            top: 2rem;
+        }
+
+        justify-content: center;
+        .navbar-brand {
+            cursor: pointer;
+            img {
+                width: 120px;
+            }
+        }
+        // when clicked, it slightly moves like button
+        .navbar-brand:active {
+            margin-top:0.3rem;
+        }
+        .navbar-nav {
+            display: none;
+        }
+    }
+
+    .indexPage-nav {
+        position: fixed;
+        z-index: 1001;
+
+        top:0;
+        left:0;
+        width:100%;
+        height:100%;
+        margin: 0;
+        background-color: rgba(0,0,0,0.65);
+        display: flex;
+        .list-group {
+            width: 100%;
+
+            margin-top:6rem;
+            flex-grow: 1;
+            max-height: 700px;
+
+            display: flex;
+            flex-flow: column;
+            .list-group-item {
+                text-decoration: none;
+
+                padding-left: 2rem;
+
+                flex-grow:1;
+                background-color: transparent;
+                border: 1px solid $primary_grey;
+                color: white;
+
+                // vertical-center the text
+                display: flex;
+                align-items: center;
+
+                //font design(big!)
+                font-size: 2rem;
+                font-weight: bold;
+                color: $primary_white;
+            }
+            .list-group-item:hover {
+                background-color: rgba(255,255,255,0.05);
+                color: $primary_orange;
+            }
+        }
+    }
+}
+
+@media (max-width: 544px) {
+    .navbar-nav {
+        display: none;
     }
 }
